# cohort_creator

./: .all-contributorsrc  .dockerignore  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .sourcery.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  Dockerfile_wip  LICENSE  Makefile  README.md  TODO.md  app.py  cohort_creator.py  datasets_results.tsv  list_openneuro_mriqc.py  locations.tsv  non_openneuro.tsv  openneuro.tsv  pyproject.toml  requirements.txt  tests_utils.py  tmp.py  tmp.tsv  utils.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: pull_request_template.md  system_test.yml  test.yml  test_docker.yml  update_listing.yml  validate_cff.yml
.github/workflows/ISSUE_TEMPLATE/: bug_report.yml
cohort_creator/: _browse.py  _cli.py  _parsers.py  _plotting.py  _run.py  _utils.py  bagelify.py  cli.py  cohort_creator.py  copy_files.py  logger.py  main.py  parsers.py  plotting.py  utils.py  visualization.py
cohort_creator/data/: _update.py  bids_filter.json  columns_description.json  non_openneuro.tsv  openneuro.tsv  openneuro_derivatives.tsv  read_nb_vols  utils.py
docker/: entrypoint.sh
docs/: Makefile  convert_to_csv.py  report.py  select_datasets.py  visualization.py  visualize_neurobagel.py
docs/abstracts/: makefile  ohbm_2024.md
docs/source/: FAQ.md  accessible_datasets.md  bids_filter.json  cohort_creator.data.rst  cohort_creator.rst  conf.py  index.rst  inputs.md  modules.rst  output.md  outputs.md  usage_notes.rst
docs/source/data/: bids_filter.json  dataset-results.tsv  participant-results.tsv
inputs/: dataset-results.tsv  datasets.tsv  datasets_with_mriqc.tsv  participant-results.tsv  participants.tsv  participants_with_mriqc.tsv
integration/: test_cohort_creator.py
src/: cohort_creator.py  parsers.py  utils.py
src/data/: bids_filter.json
study-foo/proc/: global_configs.json
tests/: conftest.py  test_bagelify.py  test_cohort_creator.py  test_copy_files.py  test_data.py  test_parsers.py  test_update.py  test_utils.py  tests_utils.py
tests/data/: datasets.tsv  participants.tsv
tools/: Makefile  OpenNeuroDerivatives.tsv  README.md  config.yml  install_extra_datasets.sh  install_missing_datasets.py  list_by_request.py  list_derivatives.py  list_mriqc.py  list_non_openneuro.py  list_openneuro.py  list_openneuro_dependencies.py  list_openneuro_mriqc.py  localize_institutions.py  read_nb_vols  report.py  requirements.txt  update_openneuro.py  utils.py  visualize_neurobagel.py
