[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
authors = [{name = "Rémi Gau"}]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "pandas",
    "rich",
    "datalad",
    "pybids",
    "rich_argparse"
]
description = "Creates a neuroimaging cohort by aggregating data across datasets."
dynamic = ["version"]
license = {text = "MIT"}
maintainers = [{name = "Rémi Gau", email = "remi.gau@gmail.com"}]
name = "cohort_creator"
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "cohort_creator[doc,test]",
    "pre-commit",
    "black",
    "flake8",
    "flake8-docstrings",
    "codespell",
    "mypy",
    "pandas-stubs"
]
doc = [
    "furo",
    "myst-parser",
    "numpydoc",
    "sphinx",
    "sphinx-copybutton",
    "sphinx-argparse"
]
docs = ["cohort_creator[doc]"]
test = ["pytest", "pytest-cov"]
tests = ["cohort_creator[test]"]

[project.scripts]
cohort_creator = "cohort_creator._cli:cli"

[project.urls]
"Bug trakcer" = "https://github.com/neurodatascience/cohort_creator/issues"
Documentation = "https://cohort-creator.readthedocs.io/en/latest/"
Homepage = "https://github.com/neurodatascience/cohort_creator"

[tool.black]
extend-exclude = '''
(
    ^/tests/data
)
'''
line-length = 99
safe = true

[tool.codespell]
skip = "./.git,.mypy_cache,env,venv,outputs,htmlcov,bids-examples,cohort_creator/data/openneuro.tsv"

[tool.hatch.build.hooks.vcs]
version-file = "cohort_creator/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["cohort_creator"]

[tool.hatch.version]
source = "vcs"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "datalad.*",
    "rich",
    "rich.logging",
    "pandas",
    "pytest",
    "cohort_creator._version",
    "bids.*",
    "rich_argparse"
]

[[tool.mypy.overrides]]
ignore_errors = true
module = [
    'tests.*',
    'integration.*',
    'format_v016_to_v020',
    'format_v020_to_v030',
    'rename'
]

[tool.pytest.ini_options]
addopts = "-ra -q -vv --cov cohort_creator "
norecursedirs = "data"
testpaths = ["tests/"]
